--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -7,5 +7,15 @@
 
 
 {% block main %}
-<p>Test</p>
+    <p>Test</p>
+    {% if current_user.is_authenticated %}
+        <p>Welcome, {{ current_user.username }}!</p>
+        <form action="{{ url_for('auth.logout') }}" method="post">
+            <input type="hidden" name="csrf_token" value="{{ csrf_token() }}"/>
+            <button type="submit">Logout</button>
+        </form>
+    {% else %}
+        <p>Welcome, Guest!</p>
+        <a href="{{ url_for('auth.login') }}">Login</a>
+    {% endif %}
 {% endblock %}
