--- a/app/templates/example_requests.html
+++ b/app/templates/example_requests.html
@@ -7,7 +7,7 @@
         {{ create_form.name.label }} {{ create_form.name }}<br>
         {{ create_form.brand.label }} {{ create_form.brand }}<br>
         {{ create_form.model.label }} {{ create_form.model }}<br>
-        {{ create_form.serial_number.label }} {{ create_form.serial_number }}<br>
+        {{ create_form.serial.label }} {{ create_form.serial }}<br>
 
         <button type="submit">Submit</button>
     </form>
@@ -20,7 +20,7 @@
         {{ update_form.name.label }} {{ update_form.name }}<br>
         {{ update_form.brand.label }} {{ update_form.brand }}<br>
         {{ update_form.model.label }} {{ update_form.model }}<br>
-        {{ update_form.serial_number.label }} {{ update_form.serial_number }}<br>
+        {{ update_form.serial.label }} {{ update_form.serial }}<br>
 
         <button type="submit">Submit</button>
     </form>
