--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -11,12 +11,12 @@
 <header class="header">
     <a class="header-link" href="/"><h2>Home</h2></a>
     {% if current_user.is_authenticated %}
-        <form action="{{ url_for('auth.logout') }}" method="post">
+        <form action="{{ url_for('auth.logout', next=request.url) }}" method="post">
             <input type="hidden" name="csrf_token" value="{{ csrf_token() }}"/>
             <button type="submit">Logout</button>
         </form>
     {% else %}
-        <a href="{{ url_for('auth.login') }}">Login</a>
+        <a href="{{ url_for('auth.login', next=request.url) }}">Login</a>
         {#register#}
     {% endif %}
 </header>
