--- a/app/templates/item_list.html
+++ b/app/templates/item_list.html
@@ -7,6 +7,9 @@
 
 
 {% block main %}
+    {% if current_user.is_authenticated %}
+        <button href="">Create</button>
+    {% endif %}
     <div class="table-container" style="max-width: 1500px; margin: auto">
         <table>
             <thead>
