--- a/app/templates/checkout_list.html
+++ b/app/templates/checkout_list.html
@@ -7,6 +7,9 @@
 
 
 {% block main %}
+    {% if current_user.is_authenticated %}
+        <a href="{{ url_for('main.create_checkout') }}">Create</a>
+    {% endif %}
     <div class="table-container" style="max-width: 1500px; margin: auto">
         <table>
             <thead>
