--- a/app/templates/employee.html
+++ b/app/templates/employee.html
@@ -44,6 +44,14 @@
                     <input type="text" id="password" name="password" value=""
                     {% if employee %}disabled{% endif %}>
                 </div>
+                {% if current_user.is_authenticated and current_user.is_admin %}
+                    <div class="detail">
+                    <label for="is_admin" class="label">Admin</label>
+                    <input type="checkbox" id="is_admin" name="is_admin"
+                    {% if employee and employee.is_admin %}checked{% endif %}
+                    {% if employee %}disabled{% endif %}>
+                </div>
+                {% endif %}
             </div>
             <input type="hidden" id="objectId" name="employee_id" value="{{ (employee.employee_id if employee) }}"
                    disabled readonly>
