--- a/app/static/stylesheets/item.css
+++ b/app/static/stylesheets/item.css
@@ -54,18 +54,28 @@ input:disabled {
     text-align: center;
 }
 
-button {
-    display: block;
-    width: 100%;
-    padding: 10px;
-    border: none;
-    border-radius: 4px;
-    background-color: #4CAF50;
-    color: white;
-    font-size: 16px;
-    cursor: pointer;
+.primary-action-container {
+    display: flex;
+    gap: 10px;
 }
 
-button:hover {
-    background-color: #45a049;
+.primary-action-container>button {
+    flex: 1;
+    width: 100%;
 }
+
+/*button {*/
+/*    display: block;*/
+/*    width: 100%;*/
+/*    padding: 10px;*/
+/*    border: none;*/
+/*    border-radius: 4px;*/
+/*    background-color: #4CAF50;*/
+/*    color: white;*/
+/*    font-size: 16px;*/
+/*    cursor: pointer;*/
+/*}*/
+
+/*button:hover {*/
+/*    background-color: #45a049;*/
+/*}*/
