--- a/app/templates/employee.html
+++ b/app/templates/employee.html
@@ -42,26 +42,35 @@
                 <div class="detail">
                     <label for="password" class="label">Password</label>
                     <input type="text" id="password" name="password" value=""
-                    {% if employee %}disabled{% endif %}>
+                           {% if employee %}disabled{% endif %}>
                 </div>
                 {% if current_user.is_authenticated and current_user.is_admin %}
                     <div class="detail">
-                    <label for="is_admin" class="label">Admin</label>
-                    <input type="checkbox" id="is_admin" name="is_admin"
-                    {% if employee and employee.is_admin %}checked{% endif %}
-                    {% if employee %}disabled{% endif %}>
-                </div>
+                        <label for="is_admin" class="label">Admin</label>
+                        <input type="checkbox" id="is_admin" name="is_admin"
+                               {% if employee and employee.is_admin %}checked{% endif %}
+                               {% if employee %}disabled{% endif %}>
+                    </div>
                 {% endif %}
             </div>
             <input type="hidden" id="objectId" name="employee_id" value="{{ (employee.employee_id if employee) }}"
                    disabled readonly>
             <p id="responseText"></p>
-            {% if current_user.is_authenticated and current_user.is_admin %}
-                <button type="button" id="editButton"
-                        onclick="toggleEdit('{% if employee %}{{ url_for("api.update_employee", employee_id=employee.employee_id) }}{% else %}{{ url_for("api.create_employee") }}{% endif %}')">
-                    {% if employee %}Edit{% else %}Create{% endif %}
-                </button>
-            {% endif %}
+            <div class="primary-action-container">
+                {% if current_user.is_authenticated %}
+                    {% if employee %}
+                        <button type="button" id="cancelButton" class="btn btn-secondary shadow-none"
+                                style="display: none;"
+                                onclick="cancelEdit(`{{ url_for("api.get_employee", employee_id=employee.employee_id) }}`)">
+                            Cancel
+                        </button>
+                    {% endif %}
+                    <button type="button" id="editButton" class="btn btn-success shadow-none"
+                            onclick="toggleEdit('{% if employee %}{{ url_for("api.update_employee", employee_id=employee.employee_id) }}{% else %}{{ url_for("api.create_employee") }}{% endif %}')">
+                        {% if employee %}Edit{% else %}Create{% endif %}
+                    </button>
+                {% endif %}
+            </div>
         </form>
     </div>
     {% if current_user.is_authenticated and current_user.is_admin %}
