--- a/app/templates/item.html
+++ b/app/templates/item.html
@@ -3,6 +3,7 @@
 
 {% block styles %}
     <link rel="stylesheet" href="{{ url_for('static', filename='stylesheets/item.css') }}">
+    <link rel="stylesheet" href="{{ url_for('static', filename='stylesheets/qrcode_label.css') }}">
 {% endblock %}
 
 
@@ -62,7 +63,7 @@
             <input type="hidden" id="objectId" name="item_id" value="{{ item.item_id if item }}" disabled readonly>
             <p id="responseText"></p>
             <div class="primary-action-container">
-                {% if current_user.is_authenticated %}
+                {% if current_user and current_user.is_authenticated %}
                     {% if item %}
                         <button type="button" id="cancelButton" class="btn btn-secondary shadow-none"
                                 style="display: none;"
@@ -78,7 +79,32 @@
             </div>
         </form>
     </div>
-    {% if current_user.is_authenticated %}
+    {% if current_user and current_user.is_authenticated %}
         <script src="{{ url_for('static', filename='javascript/update_form.js') }}"></script>
+    {% endif %}
+
+    {% if item and current_user and current_user.is_authenticated %}
+        <script src="{{ url_for('static', filename='javascript/qrcode/jquery.min.js') }}"></script>
+        <script src="{{ url_for('static', filename='javascript/qrcode/qrcode.js') }}"></script>
+
+        <div class="printable-label">
+            <div id="qrcode"></div>
+            <div class="label-text">
+                <h1 class="label-name">
+                    {{ item.name }}
+                </h1>
+                <h2 class="label-item-location">
+                    {{ item.location_id }}
+                </h2>
+            </div>
+        </div>
+        <script type="text/javascript">
+            new QRCode(document.getElementById("qrcode"), {
+                text: "http://jindo.dev.naver.com/collie",
+                width: 128,
+                height: 128,
+                {#correctionLevel: QRCode.CorrectLevel.M#}
+            });
+        </script>
     {% endif %}
 {% endblock %}
