--- a/app/templates/item_list.html
+++ b/app/templates/item_list.html
@@ -29,8 +29,8 @@
                     <td>{{ item.brand }}</td>
                     <td>{{ item.model }}</td>
                     <td>{{ item.serial }}</td>
-                    <td>{{ item.location_id }}</td>
-                    <td>{{ item.status_id }}</td>
+                    <td>{{ item.location_name }}</td>
+                    <td>{{ item.status_name }}</td>
                 </tr>
             {% endfor %}
             </tbody>
