--- a/app/templates/item.html
+++ b/app/templates/item.html
@@ -11,7 +11,7 @@
     <div class="item-card" style="margin: auto">
         <div class="card-header-container">
             <h1 id="objectName">{% if item %}{{ item.name }}{% else %}Create Item{% endif %}</h1>
-            {% if item %}
+            {% if item and current_user and current_user.is_admin %}
                 <div class="delete-button-container">
                     <button type="button" id="deleteButton" class="btn btn-danger shadow-none"
                             onclick="deleteObject('{{ url_for('api.delete_item', item_id=item.item_id) }}')">
@@ -74,29 +74,53 @@
             <input type="hidden" id="objectId" name="item_id" value="{{ item.item_id if item }}" disabled readonly>
             <p id="responseText"></p>
             <div class="primary-action-container">
-                {% if current_user and current_user.is_authenticated %}
-                    {% if item %}
-                        <button type="button" id="cancelButton" class="btn btn-secondary shadow-none"
-                                style="display: none;"
-                                onclick="cancelEdit(`{{ url_for("api.get_single_item", item_id=item.item_id) }}`)">
-                            Cancel
+                <div class="action-row">
+                    {% if current_user and current_user.is_admin %}
+                        {% if item %}
+                            <button type="button" id="cancelButton" class="btn btn-secondary shadow-none"
+                                    style="display: none;"
+                                    onclick="cancelEdit(`{{ url_for("api.get_single_item", item_id=item.item_id) }}`)">
+                                Cancel
+                            </button>
+                        {% endif %}
+                        <button type="button" id="editButton" class="btn btn-success shadow-none"
+                                onclick="toggleEdit('{% if item %}{{ url_for("api.update_item", item_id=item.item_id) }}{% else %}{{ url_for("api.create_item") }}{% endif %}')">
+                            {% if item %}Edit{% else %}Create{% endif %}
                         </button>
                     {% endif %}
-                    <button type="button" id="editButton" class="btn btn-success shadow-none"
-                            onclick="toggleEdit('{% if item %}{{ url_for("api.update_item", item_id=item.item_id) }}{% else %}{{ url_for("api.create_item") }}{% endif %}')">
-                        {% if item %}Edit{% else %}Create{% endif %}
-                    </button>
-                {% endif %}
+                </div>
+                <div class="action-row">
+                    {% if item %}
+                        <button type="button" id="printButton" class="btn btn-info shadow-none"
+                                onclick="window.print()">
+                            Print Label
+                        </button>
+                    {% endif %}
+                    {% if item and current_user and current_user.is_authenticated %}
+                        {% if item.status_id == 1 %}
+                            <button type="button" id="checkoutButton" class="btn btn-primary shadow-none"
+                                    onclick="checkout('{{ url_for("api.create_checkout") }}', {{ item.item_id }})">
+                                Checkout
+                            </button>
+                        {% elif item.status_id == 2 %}
+                            <button type="button" id="returnCheckoutButton" class="btn btn-primary shadow-none"
+                                    onclick="returnCheckout('{{ url_for("api.return_item_by_id", item_id=item.item_id) }}')">
+                                Return
+                            </button>
+                        {% endif %}
+                    {% endif %}
+                </div>
             </div>
         </form>
     </div>
-    {% if current_user and current_user.is_authenticated %}
+    {% if current_user and current_user.is_admin %}
         <script src="{{ url_for('static', filename='javascript/update_form.js') }}"></script>
     {% endif %}
 {% endblock %}
 
 {% block printable %}
     {% if item and current_user and current_user.is_authenticated %}
+        <script src="{{ url_for('static', filename='javascript/checkout.js') }}"></script>
         <script src="{{ url_for('static', filename='javascript/qrcode/jquery.min.js') }}"></script>
         <script src="{{ url_for('static', filename='javascript/qrcode/qrcode.js') }}"></script>
 
@@ -113,8 +137,6 @@
                 {% endif %}
             </div>
         </div>
-
-        <button id="printButton" onclick="window.print()">Print</button>
 
         <script type="text/javascript">
             new QRCode(document.getElementById("qrcode"), {
