--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -1,23 +1,47 @@
-{% extends 'base.html' %}
+<!DOCTYPE html>
+<html lang="en">
 
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Login - Inventory Management System</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+</head>
 
-{% block styles %}
+<body>
+    <div class="container">
+        <div class="row justify-content-center mt-4">
+            <div class="col-md-3">
+                <div class="text-center mb-3">
+                    <a href="/">
+                        <img src="{{ url_for('static', filename='images/inventory-logo.jpg') }}" alt="logo" class="img-fluid" style="width: 70px; height: 70px;">
+                    </a>
+                </div>
+                <h1 class="card-title text-center mb-3 fs-4 fw-light">Login to Inventory Management System</h1>
+                <div class="card">
+                    <div class="card-body text-dark bg-light">
+                        <form id="login-form" action="{{ url_for('auth.login') }}" method="POST">
+                            {{ form.hidden_tag() }}
+                            <div class="mb-3">
+                                <label for="username" class="form-label">Username</label>
+                                <input type="text" class="form-control" id="username" name="username" required>
+                            </div>
+                            <div class="mb-3">
+                                <label for="password" class="form-label">Password</label>
+                                <input type="password" class="form-control" id="password" name="password" required>
+                            </div>
+                            <div class="text-center mb-3">
+                                <button type="submit" class="btn btn-success btn-block w-100" id="submitButton">Sign
+                                    In</button>
+                            </div>
+                        </form>
+                        <p class="text-center"><a href="/resetPassword" class="text-decoration-none">Forgot Password?</a></p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+</body>
 
-{% endblock %}
-
-
-{% block main %}
-    <form method="post">
-        {{ form.csrf_token }}
-        Username: {{ form.username(size=20) }}<br>
-        Password: {{ form.password(size=20) }}<br>
-        <button type="submit">Log In</button>
-        {% with messages = get_flashed_messages() %}
-            {% if messages %}
-                {% for message in messages %}
-                    <p style="display: inline-block">{{ message }}</p>
-                {% endfor %}
-            {% endif %}
-        {% endwith %}
-    </form>
-{% endblock %}
+</html>
