--- a/app/templates/home.html
+++ b/app/templates/home.html
@@ -1,25 +1,45 @@
-{% extends 'base.html' %}
-
-
-{% block styles %}
-
-{% endblock %}
-
-
-{% block main %}
-    <p>Test</p>
-    {% if current_user.is_authenticated %}
-        <p>Welcome, {{ current_user.username }}!</p>
-        <form action="{{ url_for('auth.logout') }}" method="post">
-            <input type="hidden" name="csrf_token" value="{{ csrf_token() }}"/>
-            <button type="submit">Logout</button>
-        </form>
-    {% else %}
-        <p>Welcome, Guest!</p>
-        <a href="{{ url_for('auth.login') }}">Login</a>
-    {% endif %}
-    <br>
-    <a href="{{ url_for('main.all_items') }}">Items</a><br>
-    <a href="{{ url_for('main.all_checkouts') }}">Checkouts</a><br>
-    <a href="{{ url_for('main.all_employees') }}">Employees</a><br>
-{% endblock %}
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Inventory Management System</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+</head>
+<body class="d-flex flex-column min-vh-100">
+    <header>
+        <nav class="navbar navbar-expand-lg bg-white">
+            <div class="container-fluid">
+                <a class="navbar-brand" href="/">
+                    <img src="{{ url_for('static', filename='images/inventory-logo.jpg') }}" alt="logo" class="img-fluid" style="width: 35px; height: 35px;">
+                </a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse justify-content-end" id="navbarNavAltMarkup">
+                    <div class="navbar-nav">
+                        {% if current_user.is_authenticated %}
+                            <span class="navbar-text mx-2">Welcome, {{ current_user.username }}!</span>
+                            <button type="button" class="btn btn-primary mx-1" onclick="window.location.href='/myProfile'">My Profile</button>
+                            <form action="{{ url_for('auth.logout') }}" method="post" class="d-inline">
+                                <input type="hidden" name="csrf_token" value="{{ csrf_token() }}"/>
+                                <button type="submit" class="btn btn-danger mx-1">Log Out</button>
+                            </form>
+                        {% else %}
+                            <button type="button" class="btn btn-primary mx-1" onclick="window.location.href='{{ url_for('auth.login') }}'">Login</button>
+                            <button type="button" class="btn btn-success mx-1" onclick="window.location.href='/signUp'">Sign Up</button>
+                        {% endif %}
+                    </div>
+                </div>
+            </div>
+        </nav>
+    </header>
+    {% block main %}
+        <br>
+        <a href="{{ url_for('main.all_items') }}">Items</a><br>
+        <a href="{{ url_for('main.all_checkouts') }}">Checkouts</a><br>
+        <a href="{{ url_for('main.all_employees') }}">Employees</a><br>
+    {% endblock %}
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+</body>
+</html>
