--- a/app/templates/documentation.html
+++ b/app/templates/documentation.html
@@ -108,7 +108,7 @@
 
         <script type="text/javascript">
             new QRCode(document.getElementById("qrcode"), {
-                text: "http://jindo.dev.naver.com/collie",
+                text: "{{ document.url }}",
                 width: 128,
                 height: 128,
                 {#correctionLevel: QRCode.CorrectLevel.M#}
