--- a/app/templates/item.html
+++ b/app/templates/item.html
@@ -140,7 +140,7 @@
 
         <script type="text/javascript">
             new QRCode(document.getElementById("qrcode"), {
-                text: "http://jindo.dev.naver.com/collie",
+                text: "{{ request.url }}",
                 width: 128,
                 height: 128,
                 {#correctionLevel: QRCode.CorrectLevel.M#}
