--- a/app/static/stylesheets/large_table.css
+++ b/app/static/stylesheets/large_table.css
@@ -16,6 +16,11 @@
     padding: 20px;
 }
 
+.table-label {
+    display: flex;
+    justify-content: space-between;
+}
+
 .list-table h2 {
     font-size: 20px;
     margin-bottom: 20px;
@@ -25,7 +30,6 @@
 table {
     width: 100%;
     border-collapse: collapse;
-    margin-bottom: 20px;
 }
 
 thead th {
