--- a/app/templates/item_list.html
+++ b/app/templates/item_list.html
@@ -7,33 +7,38 @@
 
 
 {% block main %}
-    {% if current_user.is_authenticated %}
-        <a href="{{ url_for('main.create_item') }}">Create</a>
-    {% endif %}
-    <div class="table-container" style="max-width: 1500px; margin: auto">
-        <table>
-            <thead>
-            <tr>
-                <th>Name</th>
-                <th>Brand</th>
-                <th>Model Number</th>
-                <th>Serial Number</th>
-                <th>Location</th>
-                <th>Status</th>
-            </tr>
-            </thead>
-            <tbody>
-            {% for item in items %}
-                <tr onclick="window.location.href='{{ url_for('main.item_details', item_id=item.item_id) }}';">
-                    <td>{{ item.name }}</td>
-                    <td>{{ item.brand }}</td>
-                    <td>{{ item.model }}</td>
-                    <td>{{ item.serial }}</td>
-                    <td>{{ item.location_name }}</td>
-                    <td>{{ item.status_name }}</td>
+    <div class="page-container">
+        <div class="list-table highlightable" style="max-width: 1500px;">
+            <div class="table-label">
+                <h3>Items</h3>
+                {% if current_user.is_authenticated %}
+                    <a href="{{ url_for('main.create_item') }}" class="btn btn-success" role="button">Create</a>
+                {% endif %}
+            </div>
+            <table>
+                <thead>
+                <tr>
+                    <th>Name</th>
+                    <th>Brand</th>
+                    <th>Model Number</th>
+                    <th>Serial Number</th>
+                    <th>Location</th>
+                    <th>Status</th>
                 </tr>
-            {% endfor %}
-            </tbody>
-        </table>
+                </thead>
+                <tbody>
+                {% for item in items %}
+                    <tr onclick="window.location.href='{{ url_for('main.item_details', item_id=item.item_id) }}';">
+                        <td>{{ item.name }}</td>
+                        <td>{{ item.brand }}</td>
+                        <td>{{ item.model }}</td>
+                        <td>{{ item.serial }}</td>
+                        <td>{{ item.location_name }}</td>
+                        <td>{{ item.status_name }}</td>
+                    </tr>
+                {% endfor %}
+                </tbody>
+            </table>
+        </div>
     </div>
 {% endblock %}
