--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -9,17 +9,32 @@
     <script src="{{ url_for('static', filename='javascript/utils.js') }}"></script>
 </head>
 <body>
-<header class="header">
-    <a class="header-link" href="/"><h2>Home</h2></a>
-    {% if current_user.is_authenticated %}
-        <form action="{{ url_for('auth.logout', next=request.url) }}" method="post">
-            <input type="hidden" name="csrf_token" value="{{ csrf_token() }}"/>
-            <button type="submit">Logout</button>
-        </form>
-    {% else %}
-        <a href="{{ url_for('auth.login', next=request.url) }}">Login</a>
-        {#register#}
-    {% endif %}
+<header>
+    <nav class="navbar navbar-expand-lg bg-white">
+        <div class="container-fluid">
+            <a class="navbar-brand" href="/">
+                <img src="{{ url_for('static', filename='images/inventory-logo.jpg') }}" alt="logo" class="img-fluid" style="width: 35px; height: 35px;">
+            </a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse justify-content-end" id="navbarNavAltMarkup">
+                <div class="navbar-nav">
+                    {% if current_user.is_authenticated %}
+                        <span class="navbar-text mx-2">Welcome, {{ current_user.username }}!</span>
+                        <button type="button" class="btn btn-primary mx-1" onclick="window.location.href='{{ url_for('main.employee_details', employee_id=(current_user.employee_id or 0)) }}'">My Profile</button>
+                        <form action="{{ url_for('auth.logout') }}" method="post" class="d-inline">
+                            <input type="hidden" name="csrf_token" value="{{ csrf_token() }}"/>
+                            <button type="submit" class="btn btn-danger mx-1">Log Out</button>
+                        </form>
+                    {% else %}
+                        <button type="button" class="btn btn-primary mx-1" onclick="window.location.href='{{ url_for('auth.login') }}'">Login</button>
+                        <button type="button" class="btn btn-success mx-1" onclick="window.location.href='/signUp'">Sign Up</button>
+                    {% endif %}
+                </div>
+            </div>
+        </div>
+    </nav>
 </header>
 
 <div class="main-content">
